<resources>
    <string name="app_name">PediloYa</string>
    <string name="usuario">User</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_blank">Blank</string>
    <string name="nombre">First Name</string>
    <string name="apellido">Last Name</string>
    <string name="fechanac">Birth Day</string>
    <string name="calle">Address</string>
    <string name="nro">Number</string>
    <string name="barrio">Neighborhood</string>
    <string name="localidad">Location</string>
    <string name="departamento">Departament</string>
    <string name="provincia">City</string>
    <string name="telefono">Telephone</string>

    //Titulos
    <string name="datosusu">User Data</string>


    //Botones
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="examinar">Browse</string>

    <string-array name="departamentos">
        <item>ANGEL VICENTE PEÑALOZA</item>
        <item>ARAUCO</item>
        <item>CAPITAL</item>
        <item>CASTRO BARROS</item>
        <item>CHAMICAL</item>
        <item>CHILECITO</item>
        <item>FAMATINA</item>
        <item>FELIPE VARELA</item>
        <item>GRAL. BELGRANO</item>
        <item>GRAL. LAMADRID</item>
        <item>GRAL. OCAMPO</item>
        <item>GRAL. SAN MARTÍN</item>
        <item>INDEPENDENCIA</item>
        <item>JUAN FACUNDO QUIROGA</item>
        <item>ROSARIO VERA PEÑALOZA</item>
        <item>SAN BLAS DE LOS SAUCES</item>
        <item>SANAGASTA</item>
        <item>VINCHINA</item>
    </string-array>

    <string-array name="provincias">
        <item>Buenos Aires</item>
        <item>Catamarca</item>
        <item>Chaco</item>
        <item>Chubut</item>
        <item>Córdoba</item>
        <item>Corrientes</item>
        <item>Entre Rios</item>
        <item>Formosa</item>
        <item>Jujuy</item>
        <item>La Pampa</item>
        <item>La Rioja</item>
        <item>Mendoza</item>
        <item>Misiones</item>
        <item>Neuquen</item>
        <item>Rio Negro</item>
        <item>Salta</item>
        <item>San Luis</item>
        <item>San Juan</item>
        <item>Santa Fé</item>
        <item>Santa Cruz</item>
        <item>Santiago del Estero</item>
        <item>Tierra del Fuego</item>
        <item>Tucuman</item>
    </string-array>
</resources>
